Fix z-index

--- a/client/components/splash/splash.css
+++ b/client/components/splash/splash.css
@@ -418,7 +418,7 @@
   left: 0;
   overflow-y: auto;
   background: rgba(0, 0, 0, 0.413);
-  z-index: 1;
+  z-index: 2;
   display: flex;
   justify-content: center;
 }
@@ -610,7 +610,7 @@
   left: 0;
   overflow-y: auto;
   background: rgba(0, 0, 0, 0.413);
-  z-index: 1;
+  z-index: 2;
   display: flex;
   justify-content: center;
 }
